Thu Jan 12 21:27:06 GMT 2012  Olly Betts <olly@survex.com>

	* geospatial/latlong_posting_source.cc,geospatial/latlongcoord.cc:
	  Fix include paths to serialise.h.

Fri Dec 16 03:05:17 GMT 2011  Olly Betts <olly@survex.com>

	* backends/brass/brass_termlisttable.cc,
	  backends/chert/chert_termlisttable.cc,
	  backends/multi/multi_postlist.cc,net/replicatetcpclient.cc,
	  net/serialise.cc,net/tcpserver.cc,tests/,
	  tests/harness/backendmanager_remoteprog.cc,tests/queryparsertest.cc,
	  tests/soaktest/soaktest_queries.cc,tests/termgentest.cc: Remove
	  unnecessary includes on "utils.h".

Fri Dec 16 02:57:49 GMT 2011  Olly Betts <olly@survex.com>

	* backends/brass/brass_btreebase.cc,backends/brass/brass_database.cc,
	  backends/brass/brass_databasereplicator.cc,
	  backends/chert/chert_btreebase.cc,backends/chert/chert_database.cc,
	  backends/chert/chert_databasereplicator.cc,
	  net/remoteconnection.cc,tests/api_replicate.cc: Replace uses of
	  fdcloser class with new FD class.
	* common/utils.h: Remove fdcloser class.

Fri Dec 16 00:56:45 GMT 2011  Olly Betts <olly@survex.com>

	* tests/api_replicate.cc: Use a const int rather than a #define for
	  BUFSIZE.

Fri Dec 16 00:50:57 GMT 2011  Olly Betts <olly@survex.com>

	* tests/api_replicate.cc: Avoid leaking fds on exceptions in
	  truncated_copy().

Fri Dec 16 00:42:11 GMT 2011  Olly Betts <olly@survex.com>

	* common/fd.h: Oops, fix to actually compile.

Thu Dec 15 23:54:44 GMT 2011  Olly Betts <olly@survex.com>

	* common/Makefile.mk,common/fd.h: Add new FD class which wraps a file
	  descriptor and ensures it gets released when we exit the scope.

Thu Dec 15 22:44:16 GMT 2011  Olly Betts <olly@survex.com>

	* weight/Makefile: Add forwarding Makefile.

Thu Dec 15 22:17:18 GMT 2011  Olly Betts <olly@survex.com>

	* weight/Makefile.mk: Ship dir_contents and Makefile.

Tue Dec 13 10:33:21 GMT 2011  Olly Betts <olly@survex.com>

	* NEWS: Update from ChangeLog and branches/1.2.
